Corrected hover state on mobile menu icons.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -308,6 +308,10 @@ a.icon {
     cursor: pointer;
 }
 
+#mobile-nav a.icon:hover {
+    color: var(--dark-grey);
+}
+
 a.icon:hover {
     color: var(--dark-grey);
 }
